[package]
name = "nes_emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

cpu = { path = "crates/cpu" }
ppu = { path = "crates/ppu" }
bus = { path = "crates/bus" }
cartridge = { path = "crates/cartridge" }
joypad = { path = "crates/joypad" }

lazy_static = "*"
bitflags = "*"
sdl2 = "*"
rand = "=0.7.3"

[workspace]

members = [
    "crates/cpu",
    "crates/bus",
]